[project]
name = "audio-analysis"
version = "0.1.0"
description = "Audio analysis service using Essentia for key, BPM, and tagging detection"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Audio analysis
    "essentia>=2.1b6.dev1164",
    "essentia-tensorflow>=2.1b6.dev1164",
    "numpy>=1.20.0",
    # HTTP client for downloading audio
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    # Utilities
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
